# aegis-deploy

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
aegis_deploy/: __init__.py  cli.py
aegis_deploy/config/: __init__.py  base.yaml  config_loader.py  prod.yaml  qa.yaml
aegis_deploy/map/: __init__.py  app.py  deid_operator.py  storage_operator.py
aegis_deploy/operators/: __init__.py  discovery.py  manifest.py
aegis_deploy/vault/: __init__.py  models.py  repository.py
aegis_deploy/vault/migrations/: 001_initial.sql
argo/: cron-workflow.yaml  deid-dag.yaml
infrastructure/: eks.tf  main.tf  rds.tf  s3.tf  secrets.tf  variables.tf
tests/unit/: test_config_loader.py  test_manifest.py  test_vault.py
